# Federated-Health-Risk-Prediction

./: .gitignore  CI_CD_FINAL_FIX.md  CI_CD_FIX_SUMMARY.md  CI_CD_MODULE_FIX.md  CI_CD_SETUP.md  Dockerfile.api  FINAL_CI_CD_STATUS.md  FINAL_PACKAGE_INSTALL_FIX.md  GITIGNORE_FIX_SUMMARY.md  MISSING_INIT_FILE_FIX.md  Makefile  PUSH_INSTRUCTIONS.md  README.md  WINDOWS_GUIDE.md  docker-compose.yml  pyproject.toml  run.ps1  run_aggregation_visualization.py
.github/workflows/: ci-cd.yml
dashboards/authority_app/: Dockerfile  app.py
dashboards/citizen_app/: Dockerfile  app.py
models/: MODEL_CARD.md
monitoring/: alerts.yml  drift_report.json  prometheus.yml
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  02_feature_viz.ipynb  03_model_prototyping.ipynb  04_federated_experiments.ipynb  05_federated_training_test.ipynb  06_federated_aggregation_visualization.ipynb  06_model_evaluation.ipynb  README.md
scripts/: create_mock_data.py  download_kaggle_data.py  prepare_node_data.py  run_federated_experiment.py  test_drift_detection.py  test_federated_simple.py  verify_setup.py  verify_system.py
src/federated_health_risk/data/: __init__.py  federated_loader.py  risk_labeling.py  simulators.py  validation.py
src/federated_health_risk/federated/: client.py  server.py
src/federated_health_risk/models/: multimodal_model.py
src/federated_health_risk/monitoring/: __init__.py  drift.py  drift_detector.py  run_checks.py
src/federated_health_risk/pipelines/: feature_builder.py  prefect_flows.py
tests/: test_feature_builder.py
(+3 files in other folders)
